<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Inventory App</string>
    <!-- Label for overflow menu option that inserts fake product data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all product data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Title text for the empty view [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">Your inventory doesn\'t have any products yet</string>

    <!-- Subtitle text for the empty view that prompts the user to add a product [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Product</string>

    <!-- Title for the activity to edit an existing product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_successful">Product saved</string>

    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_failed">Error with saving product</string>

    <!-- Toast message in editor when current product was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_successful">Product updated</string>

    <!-- Toast message in editor when current product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_failed">Error with updating product</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Name</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_price">Price</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_quantity">Quantity</string>

    <!-- Text hint for supplier field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_supplier">Supplier</string>

    <!-- Text hint for supplier phone number field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_supplier_phone_number">Supplier Phone Number</string>

    <!-- Label for the price's product if the product is unknown [CHAR LIMIT=20] -->
    <string name="unknown_price">Unknown price</string>

    <!-- Toast message in editor when name is empty [CHAR LIMIT=NONE] [CHAR LIMIT=20] -->
    <string name="editor_empty_name">Name can\'t be empty</string>

    <!-- Toast message in editor when price is empty [CHAR LIMIT=NONE] [CHAR LIMIT=20] -->
    <string name="editor_empty_price">Price can\'t be empty</string>

    <!-- Toast message in editor when quantity is empty [CHAR LIMIT=NONE] [CHAR LIMIT=20] -->
    <string name="editor_empty_quantity">Quantity can\'t be empty</string>

    <!-- Toast message in editor when supplier is empty [CHAR LIMIT=NONE] [CHAR LIMIT=20] -->
    <string name="editor_empty_supplier">Supplier can\'t be empty</string>

    <!-- Toast message in editor when supplier phone number is empty [CHAR LIMIT=NONE] [CHAR LIMIT=20] -->
    <string name="editor_empty_supplier_phone_number">Supplier phone number can\'t be empty</string>

    <!-- Toast message in editor when price is less than 0 [CHAR LIMIT=NONE] [CHAR LIMIT=20] -->
    <string name="editor_price_less_than_zero">Price value can\'t be less than 0</string>

    <!-- Toast message in editor when quantity is less than 0 [CHAR LIMIT=NONE] [CHAR LIMIT=20] -->
    <string name="editor_quantity_less_than_zero">Quantity value can\'t be less than 0</string>



</resources>
